# ConfigForge

./: .gitignore  CMakeLists.txt  README.md
include/configforge/: version.hpp
src/: main.cpp
